RESOLVED FIXED35951
Frequent crashes in Dashcode at JSC::Bindings::ObjcInstance::~ObjcInstance + 80
https://bugs.webkit.org/show_bug.cgi?id=35951
Summary Frequent crashes in Dashcode at JSC::Bindings::ObjcInstance::~ObjcInstance + 80
Alexey Proskuryakov
Reported 2010-03-09 17:18:25 PST
Dashcode crashes with ToT WebKit on many operations. Patch forthcoming.
Attachments
proposed fix (1.70 KB, patch)
2010-03-09 17:22 PST, Alexey Proskuryakov
oliver: review+
Tiger fix (1.42 KB, patch)
2010-03-09 19:06 PST, Alexey Proskuryakov
mrowe: review+
Alexey Proskuryakov
Comment 1 2010-03-09 17:22:06 PST
Created attachment 50361 [details] proposed fix
Oliver Hunt
Comment 2 2010-03-09 17:27:36 PST
Comment on attachment 50361 [details] proposed fix r=me
Alexey Proskuryakov
Comment 3 2010-03-09 17:29:58 PST
Alexey Proskuryakov
Comment 4 2010-03-09 18:58:43 PST
Need to fix Tiger code path, too. Note that it's correct to use value personality in DOMInternal.mm - it's used for values there, and it just gives a description function.
Alexey Proskuryakov
Comment 5 2010-03-09 19:06:21 PST
Created attachment 50366 [details] Tiger fix
Alexey Proskuryakov
Comment 6 2010-03-09 20:08:24 PST
Note You need to log in before you can comment on or make changes to this bug.