        Reviewed by Oliver Hunt.

https://bugs.webkit.org/show_bug.cgi?id=35951
        <rdar://problem/7327060> Frequent crashes in Dashcode at JSC::Bindings::ObjcInstance::~ObjcInstance + 80

        * bridge/objc/objc_instance.mm: (createInstanceWrapperCache): It's not correct to use object
        personality for keys, because the key can be a mutable object, so its hash can change over its
        lifetime.



Canonical link: https://commits.webkit.org/47053@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55757 268f45cc-cd09-0410-ab3c-d52691b4dbfc